--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="cut">
                 <div class="copy">
                     <p>
-                        For the fig swirl, melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs
+                        Hello. For the fig swirl, melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs
 						and toss into a saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy
 						mixture. Add salt with one or two stirs, set aside, and let cool completely.
                     </p>
